# smartvision

./: .clang-format  .gitignore  CMakeLists.txt  readme.md  run-rpi.sh  run-x86.sh
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt
app/app-gui/: CMakeLists.txt
app/app-test/: CMakeLists.txt  main.cpp
app/test-module/test-common/: CMakeLists.txt  test-log-main.cpp
app/test-module/test-efd/: CMakeLists.txt  main-efd.cpp
app/test-module/test-gstream/: CMakeLists.txt  main-rtsp.cpp
app/test-module/test-signal/: CMakeLists.txt  main-signal.cpp
app/test-module/test-thread/: CMakeLists.txt  main-thread.cpp
src/common/: CMakeLists.txt  EventFdMutex.cpp  EventFdMutex.h  Logger.cpp  Logger.h  WorkerThread.cpp  WorkerThread.h
src/realvision/: CMakeLists.txt
src/realvision/config/: Constant.h
src/realvision/detection/: CMakeLists.txt
src/realvision/detection/inference/: OnnxRuntime.cpp  OnnxRuntime.h
src/realvision/grpc/: CMakeLists.txt
src/realvision/grpc/proto/: generic.proto
src/realvision/gstream/: CMakeLists.txt  Orchestrator.cpp  Orchestrator.h
src/realvision/gstream/rtsp/client/: BatchManager.cpp  BatchManager.h  RtspClient.cpp  RtspClient.h
src/realvision/gstream/rtsp/server/: RtspServer.cpp  RtspServer.h
src/realvision/gui/: CMakeLists.txt
src/realvision/gui/viewmodel/: StreamImageProvider.cpp  StreamImageProvider.h
