add_subdirectory(app-gui)
add_subdirectory(app-test)

# test module common
add_subdirectory(test-module/test-common)
add_subdirectory(test-module/test-efd)
add_subdirectory(test-module/test-thread)
add_subdirectory(test-module/test-signal)

# test module realvision
add_subdirectory(test-module/test-gstream)
